Создал полную конфигурация связи dto - model - repository - server - controller добавил swagger